--- a/src/emails/branded.hbs
+++ b/src/emails/branded.hbs
@@ -7,7 +7,7 @@ subject: Branded transaction email example
 	<table>
 		<tr>
 			<td class="align-center">
-				<a href="http://www.mailgun.com"><img src="../src/img/mailgun.png" height="50" alt="Mailgun"></a>
+				<a href="http://www.mailgun.com"><img src="https://south-dakota-retirement-community.s3.amazonaws.com/ebulletin/dist/img/mailgun.png" height="50" alt="Mailgun"></a>
 			</td>
 		</tr>
 	</table>
